# png-metadata

./: .gitignore  Cargo.toml  README.md
src/: main.rs  main_loop.rs  structs.rs  utils.rs
src/main_loop/: dir.rs  download_file.rs  local_file.rs  mod.rs  search.rs
src/update/: mod.rs
