[package]
name = "metadata"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
png = "0.17.7"
reqwest = { version = "0.11.14", features = ["blocking"] }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
